--- a/EvidencePojisteniWeb/Views/Pojistenec/Index.cshtml
+++ b/EvidencePojisteniWeb/Views/Pojistenec/Index.cshtml
@@ -18,80 +18,82 @@
     </div>
 
     <div class="col mt-4">
-        <table class="table table-responsive table-hover table-bordered">
-            @if (Model.Count > 0)
-            {
-                <thead>
-                    <tr class="table-primary">
-                        <th>@Html.DisplayNameFor(model => model[0].Jmeno)</th>
-                        <th>Pojištění</th>
-                        <th>@Html.DisplayNameFor(model => model[0].DatumNarozeni)</th>
-                        <th>@Html.DisplayNameFor(model => model[0].UliceCpCe)</th>
-                        <th>@Html.DisplayNameFor(model => model[0].Mesto)</th>
-                        <th>@Html.DisplayNameFor(model => model[0].PSC)</th>
-                        <th>@Html.DisplayNameFor(model => model[0].Stat)</th>
-                        <th>@Html.DisplayNameFor(model => model[0].Telefon)</th>
-                        <th>@Html.DisplayNameFor(model => model[0].Email)</th>
-                        <th></th>
-                    </tr>
-                </thead>
-            }
-            <tbody class="">
-                @foreach (var item in Model)
+        <div class="table-responsive rounded-3 overflow-hidden">
+            <table class="table table-hover table-bordered mb-0">
+                @if (Model.Count > 0)
                 {
-                    <tr>
-                        <td>
-                            <a asp-action="Details" asp-route-id="@item.Id">
-                                @item.Jmeno @item.Prijmeni
-                            </a>
-                        </td>
-                        <td>
-                            @if(item.PojisteniOsoby != null && item.PojisteniOsoby.Any())
-                            {
-                                @foreach (var skupina in item.PojisteniOsoby
-                                                                   .Where(po => po.Pojisteni != null)
-                                                                   .GroupBy(PojistenecModel => PojistenecModel.Pojisteni))
-                                {
-                                    <div class="mb-1">
-                                        <strong>@skupina.Key?.TypPojisteni</strong><br />
-                                        (@string.Join("/", skupina.Select(g => g.Role.ToString())))
-                                    </div>
-                                }
-                            }
-                            else
-                            {
-                                <span class="text-muted">Bez pojištění</span>
-                            }
-                        </td>
-                        <td>
-                            @Html.DisplayFor(modelItem => item.DatumNarozeni)
-                        </td>
-                        <td>
-                            @Html.DisplayFor(modelItem => item.UliceCpCe)
-                        </td>
-                        <td>
-                            @Html.DisplayFor(modelItem => item.Mesto)
-                        </td>
-                        <td>
-                            @Html.DisplayFor(modelItem => item.PSC)
-                        </td>
-                        <td>
-                            @Html.DisplayFor(modelItem => item.Stat)
-                        </td>
-                        <td>
-                            @Html.DisplayFor(modelItem => item.Telefon)
-                        </td>
-                        <td>
-                            @Html.DisplayFor(modelItem => item.Email)
-                        </td>
-                        <td>
-                            <a role="button" class="btn btn-warning m-1" asp-action="Edit" asp-route-id="@item.Id">Editovat</a>
-                            <a role="button" class="btn btn-danger m-1" asp-action="Delete" asp-route-id="@item.Id">Odstranit</a>
-                        </td>
-                    </tr>
+                    <thead>
+                        <tr class="table-success">
+                            <th>@Html.DisplayNameFor(model => model[0].Jmeno)</th>
+                            <th>Pojištění</th>
+                            <th>@Html.DisplayNameFor(model => model[0].DatumNarozeni)</th>
+                            <th>@Html.DisplayNameFor(model => model[0].UliceCpCe)</th>
+                            <th>@Html.DisplayNameFor(model => model[0].Mesto)</th>
+                            <th>@Html.DisplayNameFor(model => model[0].PSC)</th>
+                            <th>@Html.DisplayNameFor(model => model[0].Stat)</th>
+                            <th>@Html.DisplayNameFor(model => model[0].Telefon)</th>
+                            <th>@Html.DisplayNameFor(model => model[0].Email)</th>
+                            <th></th>
+                        </tr>
+                    </thead>
                 }
-            </tbody>
-        </table>
+                <tbody class="">
+                    @foreach (var item in Model)
+                    {
+                        <tr>
+                            <td>
+                                <a asp-action="Details" asp-route-id="@item.Id">
+                                    @item.Jmeno @item.Prijmeni
+                                </a>
+                            </td>
+                            <td>
+                                @if (item.PojisteniOsoby != null && item.PojisteniOsoby.Any())
+                                {
+                                    @foreach (var skupina in item.PojisteniOsoby
+                                                                .Where(po => po.Pojisteni != null)
+                                                                .GroupBy(PojistenecModel => PojistenecModel.Pojisteni))
+                                    {
+                                        <div class="mb-1">
+                                            <strong>@skupina.Key?.TypPojisteni</strong><br />
+                                            (@string.Join("/", skupina.Select(g => g.Role.ToString())))
+                                        </div>
+                                    }
+                                }
+                                else
+                                {
+                                    <span class="text-muted">Bez pojištění</span>
+                                }
+                            </td>
+                            <td>
+                                @Html.DisplayFor(modelItem => item.DatumNarozeni)
+                            </td>
+                            <td>
+                                @Html.DisplayFor(modelItem => item.UliceCpCe)
+                            </td>
+                            <td>
+                                @Html.DisplayFor(modelItem => item.Mesto)
+                            </td>
+                            <td>
+                                @Html.DisplayFor(modelItem => item.PSC)
+                            </td>
+                            <td>
+                                @Html.DisplayFor(modelItem => item.Stat)
+                            </td>
+                            <td>
+                                @Html.DisplayFor(modelItem => item.Telefon)
+                            </td>
+                            <td>
+                                @Html.DisplayFor(modelItem => item.Email)
+                            </td>
+                            <td>
+                                <a role="button" class="btn btn-warning m-1" asp-action="Edit" asp-route-id="@item.Id">Editovat</a>
+                                <a role="button" class="btn btn-danger m-1" asp-action="Delete" asp-route-id="@item.Id">Odstranit</a>
+                            </td>
+                        </tr>
+                    }
+                </tbody>
+            </table>
+        </div>
     </div>
 
     <div class="row">
