--- a/EvidencePojisteniWeb/Views/PojisteniOsoby/Create.cshtml
+++ b/EvidencePojisteniWeb/Views/PojisteniOsoby/Create.cshtml
@@ -73,7 +73,7 @@
         </form>
     </div>
     <div class="mt-5">
-        <a asp-controller="Pojistenec" asp-action="Details" asp-route-id="@Model.OsobaId">Back to List</a>
+        <a class="btn btn-outline-secondary" asp-controller="Pojistenec" asp-action="Details" asp-route-id="@Model.OsobaId">Zpět na přehled</a>
     </div>
 </div>
 
