--- a/EvidencePojisteniWeb/Views/Pojistenec/Create.cshtml
+++ b/EvidencePojisteniWeb/Views/Pojistenec/Create.cshtml
@@ -104,7 +104,7 @@
 
 
     <div class="mt-5">
-        <a asp-action="Index">Back to List</a>
+        <a class="btn btn-outline-secondary" asp-action="Index">Zpět na přehled</a>
     </div>
 </div>
 
