--- a/EvidencePojisteniWeb/Views/Pojistenec/Delete.cshtml
+++ b/EvidencePojisteniWeb/Views/Pojistenec/Delete.cshtml
@@ -74,7 +74,7 @@
         <input type="hidden" asp-for="Id" />
         <input type="submit" value="Delete" class="btn btn-lg btn-danger" />
         <div class="mt-5">
-            <a asp-action="Index">Back to List</a>
+            <a class="btn btn-outline-secondary" asp-action="Index">Zpět na přehled</a>
         </div>
     </form>
 </div>
