--- a/EvidencePojisteniWeb/Views/PojisteniOsoby/Delete.cshtml
+++ b/EvidencePojisteniWeb/Views/PojisteniOsoby/Delete.cshtml
@@ -1,39 +1,45 @@
 ﻿@model EvidencePojisteniWeb.Models.PojisteniOsobyModel
 
 @{
-    ViewData["Title"] = "Delete";
+    ViewData["Title"] = "Odstranění pojištění";
 }
 
-<h1>Delete</h1>
+<div class="container">
+    <header class="pb-2 border-bottom">
+        <h4 class="d-flex align-items-center text-body-emphasis text-decoration-none">
+            @ViewData["Title"]
+        </h4>
+    </header>
 
-<h3>Are you sure you want to delete this?</h3>
-<div>
-    <h4>PojisteniOsobyModel</h4>
-    <hr />
-    <dl class="row">
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Osoba)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Osoba.Email)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Pojisteni)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Pojisteni.PredmetPojisteni)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Role)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Role)
-        </dd>
+    <h3 class="text-danger text-center mt-2">
+        Opravdu si přejete odstranit toto pojištění přiřazené pojištěnci <strong>@Model.Osoba?.Jmeno @Model.Osoba?.Prijmeni</strong>?
+    </h3>
+
+    <dl class="row mt-5">
+        <dt class="col-sm-3">E-mail</dt>
+        <dd class="col-sm-9">@Model.Osoba?.Email</dd>
+
+        <dt class="col-sm-3">Typ pojištění</dt>
+        <dd class="col-sm-9">@Model.Pojisteni?.TypPojisteni</dd>
+
+        <dt class="col-sm-3">Předmět pojištění</dt>
+        <dd class="col-sm-9">@Model.Pojisteni?.PredmetPojisteni</dd>
+
+        <dt class="col-sm-3">Částka</dt>
+        <dd class="col-sm-9">@Model.Pojisteni?.Castka.ToString("C")</dd>
+
+        <dt class="col-sm-3">Platnost</dt>
+        <dd class="col-sm-9">@Model.PlatnostOd.ToShortDateString() – @Model.PlatnostDo.ToShortDateString()</dd>
+
+        <dt class="col-sm-3">Role</dt>
+        <dd class="col-sm-9">@Model.Role</dd>
     </dl>
-    
+
     <form asp-action="Delete">
         <input type="hidden" asp-for="Id" />
-        <input type="submit" value="Delete" class="btn btn-danger" /> |
-        <a asp-action="Index">Back to List</a>
+        <input type="submit" value="Odstranit" class="btn btn-lg btn-danger" />
+        <div class="mt-5">
+            <a asp-action="Index" class="btn btn-outline-secondary">Zpět na přehled</a>
+        </div>
     </form>
 </div>
