--- a/EvidencePojisteniWeb/Views/PojisteniOsoby/Details.cshtml
+++ b/EvidencePojisteniWeb/Views/PojisteniOsoby/Details.cshtml
@@ -1,36 +1,43 @@
 ﻿@model EvidencePojisteniWeb.Models.PojisteniOsobyModel
 
 @{
-    ViewData["Title"] = "Details";
+    ViewData["Title"] = "Detail pojištění";
 }
 
-<h1>Details</h1>
+<div class="container mt-4">
+    <header class="pb-2 border-bottom">
+        <h4 class="d-flex align-items-center text-body-emphasis text-decoration-none">
+            @ViewData["Title"]
+        </h4>
+    </header>
 
-<div>
-    <h4>PojisteniOsobyModel</h4>
-    <hr />
-    <dl class="row">
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Osoba)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Osoba.Email)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Pojisteni)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Pojisteni.PredmetPojisteni)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Role)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Role)
-        </dd>
-    </dl>
-</div>
-<div>
-    <a asp-action="Edit" asp-route-id="@Model?.Id">Edit</a> |
-    <a asp-action="Index">Back to List</a>
+    <div class="card mt-4">
+        <div class="card-header bg-success text-white">
+            Pojištěnec: @Model.Osoba?.Jmeno @Model.Osoba?.Prijmeni
+        </div>
+        <div class="card-body">
+            <dl class="row">
+                <dt class="col-sm-3">E-mail</dt>
+                <dd class="col-sm-9">@Model.Osoba?.Email</dd>
+
+                <dt class="col-sm-3">Typ pojištění</dt>
+                <dd class="col-sm-9">@Model.Pojisteni?.TypPojisteni</dd>
+
+                <dt class="col-sm-3">Předmět pojištění</dt>
+                <dd class="col-sm-9">@Model.Pojisteni?.PredmetPojisteni</dd>
+
+                <dt class="col-sm-3">Částka</dt>
+                <dd class="col-sm-9">@Model.Pojisteni?.Castka.ToString("C")</dd>
+
+                <dt class="col-sm-3">Platnost</dt>
+                <dd class="col-sm-9">@Model.PlatnostOd.ToShortDateString() – @Model.PlatnostDo.ToShortDateString()</dd>
+
+                <dt class="col-sm-3">Role</dt>
+                <dd class="col-sm-9">@Model.Role</dd>
+            </dl>
+
+            <a asp-action="Edit" asp-route-id="@Model.Id" class="btn btn-warning">Editovat</a>
+            <a asp-action="Index" class="btn btn-outline-secondary">Zpět na přehled</a>
+        </div>
+    </div>
 </div>
