--- a/EvidencePojisteniWeb/Views/PojisteniOsoby/Delete.cshtml
+++ b/EvidencePojisteniWeb/Views/PojisteniOsoby/Delete.cshtml
@@ -39,7 +39,7 @@
         <input type="hidden" asp-for="Id" />
         <input type="submit" value="Odstranit" class="btn btn-lg btn-danger" />
         <div class="mt-5">
-            <a asp-action="Index" class="btn btn-outline-secondary">Zpět na přehled</a>
+            <a class="btn btn-outline-secondary" asp-controller="Pojistenec" asp-action="Details" asp-route-id="@Model.OsobaId">Zpět na přehled</a>
         </div>
     </form>
 </div>
