--- a/EvidencePojisteniWeb/Views/Home/Index.cshtml
+++ b/EvidencePojisteniWeb/Views/Home/Index.cshtml
@@ -1,41 +1,56 @@
-﻿@{
+﻿@using EvidencePojisteniWeb.Models.ViewModels
+
+@{
     ViewData["Title"] = "Evidence pojištění";
+
+    // sestavení položek pro Breadscrumb
+    var bcItem = new List<BreadcrumbItem>
+    {
+        new BreadcrumbItem { Text = "Domů", Controller = "Home", Action = "Index" },
+        new BreadcrumbItem { Text = "Evidence pojištění", IsActive = true }
+    };
 }
 
-    <div class="container">
-        <header class="pb-2 border-bottom">
-            <h4 href="/" class="d-flex align-items-center text-body-emphasis text-decoration-none">
+@await Html.PartialAsync("_Breadcrumb", bcItem)
+
+<div class="container">
+    <header class="pb-2 border-bottom">
+        <h3 href="/" class="d-flex align-items-center text-body-emphasis text-decoration-none">
             @ViewData["Title"]
-            </h4>
-        </header>
+        </h3>
+    </header>
 
-        <div class="p-4 mb-4 bg-body-tertiary rounded-3">
-            <div class="container-fluid py-4">
-                <h3 class="display-4 fw-bold">EvidencePojisteniWeb.cz</h3>
+    <div class="p-4 mb-4 bg-body-tertiary rounded-3">
+        <div class="container-fluid py-4">
+            <h3 class="display-4 fw-bold">EvidencePojisteniWeb.cz</h3>
 
-                <p class="col-md-8 fs-6 fw-bold">Evidence pojištění je síť na, které se můžete bezpečně pojistit proti jakýmkoli
+            <p class="col-md-8 fs-6 fw-bold">
+                Evidence pojištění je síť na, které se můžete bezpečně pojistit proti jakýmkoli
                 událostem. Naše aplikace je zdarma a bez reklam. Stačí se zaregistrovat a můžete si vybrat z našich produktů, které
-                Vám nabízejí širokou škálu možností pojištění, proti nechtěným událostem.</p>
-                
-                <a class="btn btn-success btn-lg" type="button" asp-controller="Pojistenec" asp-action="Index">Vsupte do portálu</a>
+                Vám nabízejí širokou škálu možností pojištění, proti nechtěným událostem.
+            </p>
+
+            <a class="btn btn-success btn-lg" type="button" asp-controller="Pojistenec" asp-action="Index">Vsupte do portálu</a>
+        </div>
+    </div>
+
+    <div class="row align-items-md-stretch">
+        <div class="col-md-6">
+            <div class="h-100 p-4 text-bg-success rounded-3">
+                <h2>Pojištění</h2>
+                <p>Stačí kliknout a podívat se v rychlém přehledu jaké možnosti tyto stránky nabízejí.</p>
+                <a class="btn btn-outline-light" type="button" asp-controller="Pojisteni" asp-action="Index">Podívat se na pojištění</a>
             </div>
         </div>
-
-        <div class="row align-items-md-stretch">
-            <div class="col-md-6">
-                <div class="h-100 p-4 text-bg-success rounded-3">
-                    <h2>Pojištění</h2>
-                    <p>Stačí kliknout a podívat se v rychlém přehledu jaké možnosti tyto stránky nabízejí.</p>
-                    <a class="btn btn-outline-light" type="button" asp-controller="Pojisteni" asp-action="Index">Podívat se na pojištění</a>
-                </div>
-            </div>
-            <div class="col-md-6">
-                <div class="h-100 p-4 bg-body-tertiary border rounded-3">
-                    <h2>Přihlášení na naše stránky</h2>
-                    <p>Přihlášení na stránky Evidence pojištění Vás posune blíž k jistějším zítřkům. S námi se můžete cítit ve větším
-                    bezpečí a plně se soustředit na prožívání života.</p>
-                    <a class="btn btn-success" type="button" asp-area="Identity" asp-page="/Account/Login">Přihlásit se</a>
-                </div>
+        <div class="col-md-6">
+            <div class="h-100 p-4 bg-body-tertiary border rounded-3">
+                <h2>Přihlášení na naše stránky</h2>
+                <p>
+                    Přihlášení na stránky Evidence pojištění Vás posune blíž k jistějším zítřkům. S námi se můžete cítit ve větším
+                    bezpečí a plně se soustředit na prožívání života.
+                </p>
+                <a class="btn btn-success" type="button" asp-area="Identity" asp-page="/Account/Login">Přihlásit se</a>
             </div>
         </div>
     </div>
+</div>
