--- a/EvidencePojisteniWeb/Views/Pojistenec/Index.cshtml
+++ b/EvidencePojisteniWeb/Views/Pojistenec/Index.cshtml
@@ -1,14 +1,24 @@
 ﻿@model EvidencePojisteniWeb.Models.PaginatedList<EvidencePojisteniWeb.Models.PojistenecModel>
+@using EvidencePojisteniWeb.Models.ViewModels
 
 @{
     ViewData["Title"] = "Pojištěnci";
+
+    // sestavení položek pro Breadscrumb
+    var bcItems = new List<BreadcrumbItem>
+    {
+        new BreadcrumbItem { Text = "Domů", Controller = "Home", Action = "Index" },
+        new BreadcrumbItem { Text = "Pojištěnci", IsActive = true }
+    };
 }
+
+@await Html.PartialAsync("_Breadcrumb", bcItems)
 
 <div class="container">
     <header class="pb-2 border-bottom">
-        <h4 href="/" class="d-flex align-items-center text-body-emphasis text-decoration-none">
+        <h3 href="/" class="d-flex align-items-center text-body-emphasis text-decoration-none">
             @ViewData["Title"]
-        </h4>
+        </h3>
     </header>
 
     <div class="row text-center mt-4">
