--- a/EvidencePojisteniWeb/Views/Shared/_LoginPartial.cshtml
+++ b/EvidencePojisteniWeb/Views/Shared/_LoginPartial.cshtml
@@ -1,6 +1,8 @@
 ﻿@using Microsoft.AspNetCore.Identity
-@inject SignInManager<IdentityUser> SignInManager
-@inject UserManager<IdentityUser> UserManager
+@using EvidencePojisteniWeb.Models
+
+@inject SignInManager<ApplicationUser> SignInManager
+@inject UserManager<ApplicationUser> UserManager
 
 <ul class="navbar-nav nav-underline">
 @if (SignInManager.IsSignedIn(User))
