feat: vylepšení UI a autentizace
- upraveno _LoginPartial.cshtml pro lepší vzhled a navigaci
- vypnuto potvrzení e-mailu v Program.cs pro snadnější testování
- upraven odsazení záhlaví v Index.cshtml
- přidán styl do _Breadcrumb.cshtml
- vylepšen _Layout.cshtml: favicon, verze CSS, fix footer
- nahrazen owl_icon.ico novou ikonou
- smazání Views/Shared/_LoginPartial - používá se v Areas/Identity/Pages

--- a/EvidencePojisteniWeb/Views/Shared/_Breadcrumb.cshtml
+++ b/EvidencePojisteniWeb/Views/Shared/_Breadcrumb.cshtml
@@ -3,7 +3,7 @@
 
 @* Zavedení Breadcrumb do view *@
 
-<nav aria-label="breadcrumb" class="pb-2 mb-1">
+<nav aria-label="breadcrumb" class="pb-2 mb-1 fst-italic fw-bold" style="font-size: 0.7rem">
   <ol class="breadcrumb bg-white p-0 mb-1">
     @foreach (var item in Model)
     {
