--- a/EvidencePojisteniWeb/Views/Home/Index.cshtml
+++ b/EvidencePojisteniWeb/Views/Home/Index.cshtml
@@ -14,7 +14,7 @@
 @await Html.PartialAsync("_Breadcrumb", bcItem)
 
 <div class="container">
-    <header class="pb-2 border-bottom">
+    <header class="pb-2 mb-4 border-bottom">
         <h3 href="/" class="d-flex align-items-center text-body-emphasis text-decoration-none">
             @ViewData["Title"]
         </h3>
