--- a/EvidencePojisteniWeb/Views/Shared/_Layout.cshtml
+++ b/EvidencePojisteniWeb/Views/Shared/_Layout.cshtml
@@ -3,11 +3,14 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="author" content="PatKin"/>
     <title>@ViewData["Title"] - EvidencePojisteniWeb</title>
+    <link rel="shortcut icon" href="~/images/owl_icon.ico" />
     <script type="importmap"></script>
-    <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
+    <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/EvidencePojisteniWeb.styles.css" asp-append-version="true" />
+
 
     <style>
         .nav-underline .nav-link:hover {
@@ -19,7 +22,13 @@
             border-bottom: 2px solid #007bff;
             color: yellowgreen !important;
         }
+
+        .footer-fixed {
+            line-height: 40px !important;
+        }
     </style>
+
+    @await RenderSectionAsync("CSS", required: false)
 </head>
 <body>
     <header class="sticky-top">
@@ -58,18 +67,18 @@
                             "Privacy" ? "active fw-bold" : "")" asp-area="" asp-controller="Home" asp-action="Privacy">O aplikaci...</a>
                         </li>
                     </ul>
-                    <partial name="_LoginPartial" />
+                    <partial name="~/Areas/Identity/Pages/_LoginPartial.cshtml" />
                 </div>
             </div>
         </nav>
     </header>
     <div class="container">
-        <main role="main" class="pb-1">
+        <main role="main" class="pb-2">
             @RenderBody()
         </main>
     </div>
 
-    <footer class="border-top footer text-muted">
+    <footer class="border-top footer text-muted footer-fixed">
         <div class="container d-flex justify-content-center">
             &copy; 2025 - Evidence pojištění -&nbsp;<a asp-area="" asp-controller="Home" asp-action="Index">App</a>&nbsp;vytvořil Patkin.cz
         </div>
