--- a/EvidencePojisteniWeb/Views/Home/Index.cshtml
+++ b/EvidencePojisteniWeb/Views/Home/Index.cshtml
@@ -1,4 +1,5 @@
-﻿@using EvidencePojisteniWeb.Models.ViewModels
+﻿
+@using EvidencePojisteniWeb.Models.ViewModels
 
 @{
     ViewData["Title"] = "Evidence pojištění";
