Aktualizovány Razor view pro registraci a přihlášení, vylepšeno stylování navigace a přidána podpora ASP.NET Core Identity. Hlavní změny zahrnují:
Úprava rozložení a struktury v Register.cshtml.

Aktualizace stylování tlačítka odhlášení v _LoginPartial.cshtml.

Oprava textu záhlaví v Index.cshtml.

Vylepšení tlačítka přihlášení v TypDetail.cshtml.

Vylepšení navigační lišty v _Layout.cshtml.

Přidán soubor ScaffoldingReadMe.txt pro nastavení ASP.NET Core Identity.

Vytvořeny soubory Login.cshtml a Login.cshtml.cs pro autentizaci uživatelů.

--- a/EvidencePojisteniWeb/Areas/Identity/Pages/Account/Register.cshtml
+++ b/EvidencePojisteniWeb/Areas/Identity/Pages/Account/Register.cshtml
@@ -21,7 +21,7 @@
     <div class="row justify-content-center">
         <div class="col-lg-8">
             <div class="bg-success text-white rounded-3 p-4 my-3">
-                <div class="row align-items-center">
+                <div class="row justify-content-around align-items-baseline">
                     <!-- logo a nadpis -->
                     <div class="col-md-4 text-center mb-4 mb-md-0">
                         <h4>Vytvořit nový účet</h4>
@@ -29,7 +29,7 @@
                     </div>
 
                     <!-- formulář -->
-                    <div class="col-md-7">
+                    <div class="col-md-6">
                         <form method="post" novalidate>
                             <div class="mb-2">
                                 <label asp-for="Input.FirstName" class="form-label"></label>
