--- a/EvidencePojisteniWeb/Areas/Identity/Pages/_LoginPartial.cshtml
+++ b/EvidencePojisteniWeb/Areas/Identity/Pages/_LoginPartial.cshtml
@@ -12,7 +12,7 @@
         </li>
         <li class="nav-item">
             <form class="form-inline" asp-area="Identity" asp-page="/Account/Logout" asp-route-returnUrl="@Url.Action("Index", "Home", new { area = "" })">
-                <button type="submit" class="nav-link btn btn-link text-warning">Logout</button>
+                <button type="submit" class="border-primary rounded-2 bg-dark text-warning mt-0 p-2 p">Logout</button>
             </form>
         </li>
     }
