--- a/EvidencePojisteniWeb/Views/Pojisteni/TypDetail.cshtml
+++ b/EvidencePojisteniWeb/Views/Pojisteni/TypDetail.cshtml
@@ -39,8 +39,8 @@
                     <span class="badge bg-success fs-6">@pocet sjednaných</span>
                 </h3>
 
-                <a href="/Account/Login" class="btn btn-outline-primary">
-                    Registrovat / Přihlásit
+                <a type="button" class="btn btn-success" asp-area="Identity" asp-page="/Account/Login">
+                    Přihlásit se
                 </a>
             </div>
 
